--- a/playbooks/5.Jinja/index.j2
+++ b/playbooks/5.Jinja/index.j2
@@ -1,54 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Color Game</title>
-    <link rel="stylesheet" href="style.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="style.css">
+        <title>Color Game</title>
 </head>
 <body>
-
-<div style="text-align: center;">
-    <header style="border-top: 5px solid orange; border-bottom: 5px solid orange; margin: 20px 0;">
+<center>
+<hr size="10px" noshade  align=center width="700px" color="orange">
         <h1>{{ custom_heading }}</h1>
-        <p style="font-size: 1.2em;">{{ custom_para }}</p>
-        <h3>AWS Account: {{ aws_account }}</h3>
-    </header>
-
-    <section style="margin: 20px 0;">
-        <h2>Server Information</h2>
-        <p><strong>Today's Date:</strong> {{ todays_date }}</p>
-        <p><strong>Hostname:</strong> {{ host_name }}</p>
-        <p><strong>Fully Qualified Domain Name:</strong> {{ fqdn_name }}</p>
-        <p><strong>IP Address:</strong> {{ ip_address }}</p>
-        <p><strong>OS Family:</strong> {{ os_family }}</p>
-        <p><strong>OS Version:</strong> {{ os_dest }}</p>
-    </section>
-
-    <section style="border-top: 3px dashed orange; padding-top: 10px;">
+        <h2>{{ custom_para }}</h2>
+        <h3>{{ aws_account }}</h3>
+        <h1> Todays date is: {{ todays_date }} </h1>
+        <h1> Server hostname is: {{ host_name }} </h1>
+        <h1> Server FQDN is: {{ fqdn_name }} </h1>
+        <h1> Server IP Address is: {{ ip_address }} </h1>
+        <h1> Server OS Family is: {{ os_family }} </h1>
+        <h1> Server OS Version is: {{ os_dest }} </h1>
         {% for item in friends %}
-            <h3>My Friend's Name is {{ item }}</h3>
+        <h3>My Friends name is {{ item }}.</h3>
         {% endfor %}
-    </section>
-
-    <section id="gameSection" style="margin-top: 30px;">
-        <div style="font-size: 1.5em; margin-bottom: 10px; color: green;">Let's Play</div>
-        <div id="smallcont" style="display: flex; justify-content: center;">
-            <button id="try1" style="padding: 10px 20px;">Start Game</button>
+<hr size="10px" noshade  align=center width="700px" color="orange">
+</center>
+       <div id="smallcont">
+                <div></div>
+                <div id="try1">Lets Play</div>
+        </div>
+        <div id="container">
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
         </div>
 
-        <div id="container" style="display: grid; grid-template-columns: repeat(3, 100px); gap: 10px; justify-content: center; margin-top: 20px;">
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-        </div>
-    </section>
-</div>
-
-<script type="text/javascript" src="scorekeeper.js"></script>
 </body>
+<script type="text/javascript" src="scorekeeper.js"></script>
 </html>
